공통 모듈 분리

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <!-- reset css CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/main.css" />
 
   <!-- font -->
@@ -57,7 +58,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- JS  -->
-  <!-- <script defer src="./js/youtube.js"></script> -->
+  <script defer src="./js/common.js"></script>
+  <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
 </head>
 
@@ -70,7 +72,7 @@
       </a>
       <div class="sub-menu">
         <ul class="menu">
-          <li><a href="/signin">Sign In</a></li>
+          <li><a href="/signin/index.html">Sign In</a></li>
           <li><a href="javascript:void(0)">My Starbucks</a></li>
           <li><a href="javascript:void(0)">Customer Service & Ideas</a></li>
           <li><a href="javascript:void(0)">Find a Store</a></li>
